# aichat

./: .gitignore  Dockerfile  README.md  create_inference_profile.sh  langchain_lambda.py  langchain_ondemand.py  langchain_profiles.py  langchain_streamlit.py  langchain_streamlit_dynamodb.py  langchain_streamlit_knowledge_base.py  print_list_foundation_models.py  pyproject.toml  requirements.txt  streamlit.py  streamlit_dynamodb.py
tools/: convert_json2txt.py  print_list_foundation_models.py
